--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@langchain/community": "^1.1.7",
     "@langchain/core": "^1.1.17",
     "@langchain/openai": "^1.2.3",
