--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.24.1",
     "@langchain/community": "^1.1.7",
     "@langchain/core": "^1.1.17",
+    "@langchain/google-genai": "^2.1.15",
     "@langchain/openai": "^1.2.3",
     "@supabase/supabase-js": "^2.84.0",
     "langchain": "^1.2.13",
     "next": "16.0.10",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
