--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@supabase/supabase-js": "^2.84.0",
     "langchain": "^1.2.13",
     "next": "16.0.10",
+    "next-auth": "^4.24.13",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "zod": "^4.3.6"
